--- a/python/website/index.html
+++ b/python/website/index.html
@@ -11,7 +11,7 @@
 <div class="document" id="readme">
 <h1 class="title">Oktest - a new style testing library -</h1>
 
-<p>$Release: 0.2.2 $</p>
+<p>$Release: 0.3.0 $</p>
 <div class="section" id="overview">
 
 <h2>Overview</h2>
@@ -39,10 +39,10 @@ not_ok ('A.txt').is_dir()  # same as assert_(not os.path.isdir('A.txt'))
 <pre class="literal-block">
 ## if you have installed easy_install:
 $ sudo easy_install Oktest
-## or download Oktest-0.2.2.tar.gz and install it
-$ wget http://pypi.python.org/packages/source/O/Oktest/Oktest-0.2.2.tar.gz
-$ tar xzf Oktest-0.2.2.tar.gz
-$ cd Oktest-0.2.2/
+## or download Oktest-0.3.0.tar.gz and install it
+$ wget http://pypi.python.org/packages/source/O/Oktest/Oktest-0.3.0.tar.gz
+$ tar xzf Oktest-0.3.0.tar.gz
+$ cd Oktest-0.3.0/
 $ sudo python setup.py install
 </pre>
 </div>
@@ -69,11 +69,11 @@ class Example1Test(object):
         shutil.rmtree('tmp.d')
 
     ## invoked before each test
-    def before_all(self):
+    def before(self):   # or setUp(self)
         self.val = ['aaa', 'bbb', 'ccc']
 
     ## invoked after each test
-    def after_all(self):
+    def after(self):    # or tearDown(self)
         pass
 
     ## test methods
