--- a/python/website/index.html
+++ b/python/website/index.html
@@ -29,6 +29,7 @@ not_ok ('A.txt').is_dir()  # same as assert_(not os.path.isdir('A.txt'))
 </pre>
 <p>You can use ok() instead of 'assertXxx()' in unittest.</p>
 <p>Oktest requires Python 2.4 or later (3.x is supported).</p>
+<p>See <a href="CHANGES.txt">CHANGES.txt</a> for changes.</p>
 <p>NOTICE!! Oktest is a young project and specification may change in the future.</p>
 </div>
 <div class="section" id="download">
