python: update 'website/index.html'

--- a/python/website/index.html
+++ b/python/website/index.html
@@ -240,13 +240,14 @@ Failed: FooTest#test1()
 <div class="section" id="tracer">
 
 <h2>Tracer</h2>
-<p>Oktest provides Tracer class which can:</p>
+<p>Oktest provides <tt class="docutils literal">Tracer</tt> class which can be stub or mock object.
+<tt class="docutils literal">Tracer</tt> class can:</p>
 <ul class="simple">
 <li>Create fake object.</li>
 <li>Trace method or function call.</li>
 <li>Fake method, or function.</li>
 </ul>
-<p>In any case, Tracer object records both arguments and return-value of method or function calls.</p>
+<p>In any case, <tt class="docutils literal">Tracer</tt> object records both arguments and return-value of method or function calls.</p>
 <p>Example to create fake object:</p>
 <pre class="literal-block">
 ## create fake objects
