--- a/python/website/index.html
+++ b/python/website/index.html
@@ -10,7 +10,7 @@
 <div class="document" id="oktest-readme">
 <h1 class="title">Oktest - a new style testing library -</h1>
 
-<p>Release: 0.0.0</p>
+<p>Release: 0.14.1</p>
 <div class="contents topic" id="contents">
 <p class="topic-title first">Contents</p>
 <ul class="simple">
@@ -87,10 +87,10 @@ class FooTest(unittest.TestCase):
 <pre class="literal-block">
 ## if you have installed easy_install:
 $ sudo easy_install Oktest
-## or download Oktest-0.0.0.tar.gz and install it
-$ wget http://pypi.python.org/packages/source/O/Oktest/Oktest-0.0.0.tar.gz
-$ tar xzf Oktest-0.0.0.tar.gz
-$ cd Oktest-0.0.0/
+## or download Oktest-0.14.1.tar.gz and install it
+$ wget http://pypi.python.org/packages/source/O/Oktest/Oktest-0.14.1.tar.gz
+$ tar xzf Oktest-0.14.1.tar.gz
+$ cd Oktest-0.14.1/
 $ sudo python setup.py install
 </pre>
 </div>
@@ -957,6 +957,12 @@ http.GET('/', <strong>form</strong>={'offset':&quot;0&quot;, 'limit':&quot;30&qu
 http.GET('/', <strong>form</strong>=&quot;offset=0&amp;limit=30&quot;)            # str
 http.GET('/', <strong>json</strong>={'offset':&quot;0&quot;, 'limit':&quot;30&quot;})   # dict
 http.GET('/', <strong>json</strong>='''{&quot;offset&quot;:0,&quot;limit&quot;:30}''')  # str
+</pre>
+<p><tt class="docutils literal">params</tt> is recognized as <tt class="docutils literal">query</tt> (for GET or HEAD) or <tt class="docutils literal">query</tt>
+(for POST, PUT, DELETE, or PATCH).</p>
+<pre class="literal-block">
+http.GET('/', <strong>params</strong>={'x':'1'})   # same as http.GET('/', query={'x':'1'})
+http.POST('/', <strong>params</strong>={'x':'1'})  # same as http.POST('/', form={'x':'1'})
 </pre>
 <p>Possible to specify HTTP headers:</p>
 <pre class="literal-block">
