--- a/python/website/index.html
+++ b/python/website/index.html
@@ -10,7 +10,7 @@
 <div class="document" id="oktest-readme">
 <h1 class="title">Oktest - a new style testing library -</h1>
 
-<p>Release: 0.14.1</p>
+<p>Release: 0.15.0</p>
 <div class="contents topic" id="contents">
 <p class="topic-title first">Contents</p>
 <ul class="simple">
@@ -87,10 +87,10 @@ class FooTest(unittest.TestCase):
 <pre class="literal-block">
 ## if you have installed easy_install:
 $ sudo easy_install Oktest
-## or download Oktest-0.14.1.tar.gz and install it
-$ wget http://pypi.python.org/packages/source/O/Oktest/Oktest-0.14.1.tar.gz
-$ tar xzf Oktest-0.14.1.tar.gz
-$ cd Oktest-0.14.1/
+## or download Oktest-0.15.0.tar.gz and install it
+$ wget http://pypi.python.org/packages/source/O/Oktest/Oktest-0.15.0.tar.gz
+$ tar xzf Oktest-0.15.0.tar.gz
+$ cd Oktest-0.15.0/
 $ sudo python setup.py install
 </pre>
 </div>
@@ -206,6 +206,8 @@ bash$ python -m oktest tests    # run all test scripts (*_test.py)
 <dd>Raise AssertionError unless x &lt; y.</dd>
 <dt>ok (x) &lt;= y</dt>
 <dd>Raise AssertionError unless x &lt;= y.</dd>
+<dt>ok (x).between(min, max)</dt>
+<dd>Raise AssertionError unless min &lt;= x &lt;= max.</dd>
 <dt>ok (x).in_delta(y, delta)</dt>
 <dd>Raise AssertionError unless y-delta &lt; x &lt; y+delta.</dd>
 <dt>ok (x).in_(y)</dt>
@@ -228,6 +230,14 @@ bash$ python -m oktest tests    # run all test scripts (*_test.py)
 <dd>Raise AssertionError unless bool(x) == True.</dd>
 <dt>ok (x).is_falsy()</dt>
 <dd>Raise AssertionError unless bool(x) == False.</dd>
+<dt>ok (xs).all(lambda)</dt>
+<dd>Raise AssertionError unless all items in xs satisfy lambda.</dd>
+<dt>ok (xs).any(lambda)</dt>
+<dd>Raise AssertionError unless there is any item in xs which satisfies lambda.</dd>
+<dt>ok (dict).has_key(key)</dt>
+<dd>Raise AssertionError unless dict.has_key(key) or key in dict.</dd>
+<dt>ok (dict).has_item(key, val)</dt>
+<dd>Raise AssertionError unless dict[key] == val.</dd>
 <dt>ok (x).has_attr(name)</dt>
 <dd>Raise AssertionError unless hasattr(x, name).</dd>
 <dt>ok (x).attr(name, value)</dt>
@@ -244,6 +254,8 @@ You can pass flag such as <tt class="docutils literal">re.M | re.S</tt>.</dd>
 <dd>Raise AssertionError unless len(x) == n.
 This is same as <tt class="docutils literal">ok (len(x)) == n</tt>, but it is useful to chain
 assertions, like <tt class="docutils literal">ok <span class="pre">(x).is_a(tuple).length(n)</span></tt>.</dd>
+<dt>ok (x).length([min, max]):</dt>
+<dd>Raise AssertionError unless min &lt;= len(x) &lt;= max.</dd>
 <dt>ok (path).is_file()</dt>
 <dd>Raise AssertionError unless os.path.isfile(path).</dd>
 <dt>ok (path).not_file()</dt>
@@ -290,6 +302,14 @@ ok (response).is_response(302).header(&quot;Location&quot;, &quot;/&quot;)  # he
 ok (response).is_response(200).json({&quot;status&quot;: &quot;OK&quot;})   # json data
 ok (response).is_response(200).body(&quot;&lt;h1&gt;Hello&lt;/h1&gt;&quot;)   # response body
 ok (response).is_response(200).body(re.compile(&quot;&lt;h1&gt;.*?&lt;/h1&gt;&quot;))
+ok (response).is_response(200).cookie('name', 'value')  # cookie
+ok (response).is_response(200).cookie('name', re.compile(r'^value$'),
+                                      domain='www.example.com',
+                                      path='/cgi'
+                                      expires='Wed, 01-Jan-2020 12:34:56 GMT',
+                                      max_age='1200',
+                                      secure=True,
+                                      httponly=True)
 </pre>
 </dd>
 <dt>NG (x)</dt>
@@ -417,20 +437,24 @@ class FooTest(unittest.TestCase):
     def _(self):
         assert 1+1 == 2
 </pre>
-<p><tt class="docutils literal">&#64;test()</tt> decorator accepts user-defined options. You can specify any name and
-value as option. It is accessable by 'self._options' in <tt class="docutils literal">setUp()</tt>, therefore
-you can change behaviour of <tt class="docutils literal">setUp()</tt> according to options.</p>
+<p><tt class="docutils literal">&#64;test()</tt> decorator accepts user-defined options. You can specify any
+name and value as options, and access to them by <tt class="docutils literal">options_of(self)</tt>
+in both <tt class="docutils literal">setUp()</tt> and test method.</p>
 <pre class="literal-block">
+import unittest
+from oktest import ok, test, <strong>options_of</strong>
+
 class FooTest(unittest.TestCase):
 
     def setUp(self):
-        tag = <strong>self._options.get(&quot;tag&quot;)</strong>
-        if tag == &quot;experimental&quot;:
+        ## change setUp() behaviour according to tag
+        dictionary = <strong>options_of(self)</strong>
+        if dictionary.get('tag') == &quot;experimental&quot;:
             ....
 
-    &#64;test(&quot;1 + 1 should be 2&quot;, <strong>tag=&quot;experimental&quot;</strong>)
+    &#64;test(&quot;example&quot;, <strong>tag=&quot;experimental&quot;, num=123</strong>)
     def _(self):
-        assert 1+1 == 2
+        assert <strong>options_of(self)</strong> == {'tag': &quot;experimental&quot;, 'num': 123}
 </pre>
 <p>You can filter testcase by user-defined options in command-line.</p>
 <pre class="literal-block">
@@ -964,9 +988,10 @@ http.GET('/', <strong>json</strong>='''{&quot;offset&quot;:0,&quot;limit&quot;:3
 http.GET('/', <strong>params</strong>={'x':'1'})   # same as http.GET('/', query={'x':'1'})
 http.POST('/', <strong>params</strong>={'x':'1'})  # same as http.POST('/', form={'x':'1'})
 </pre>
-<p>Possible to specify HTTP headers:</p>
+<p>Possible to specify HTTP headers and cookies:</p>
 <pre class="literal-block">
 http.GET('/', <strong>headers</strong>={'Cookie': 'name=val'})
+http.GET('/', <strong>cookies</strong>='name=val')   # or {'name':'val'}
 </pre>
 <p>And also possible to specify environ dict.</p>
 <pre class="literal-block">
@@ -980,6 +1005,27 @@ http = WSGITest(app, <strong>environ</strong>)
 
 ## or on http.GET(), http.POST(), ...
 response = http.GET('/', <strong>environ=environ</strong>)
+</pre>
+<p>Since release 0.15, Oktest.py provides <tt class="docutils literal">oktest.web.MultiPart</tt> class
+which builds multipart form data.</p>
+<pre class="literal-block">
+from oktest.web import MultiPart
+mp = MultiPart()    # or boundary='abcdef'; mp = MutliPart(boundary)
+print(mp.boundary)
+    #=&gt; 0dC42pwi4FJs4czr-zMTPjCCDPJEZ_acT
+print(mp.content_type)
+    #=&gt; multipart/form-data; boundary=0dC42pwi4FJs4czr-zMTPjCCDPJEZ_acT
+
+mp.add(&quot;name1&quot;, &quot;value1&quot;)          # add string value
+with open(&quot;logo.png&quot;, 'wb') as f:  # add file value
+    mp.add(&quot;file1&quot;, f.read(), &quot;logo.png&quot;, &quot;image/png&quot;)
+print(mp.build())
+</pre>
+<p>How to test with multipart form data:</p>
+<pre class="literal-block">
+resp = http.POST('/upload', <strong>multipart=mp</strong>)
+## or
+resp = http.POST('/upload', <strong>params=mp</strong>)
 </pre>
 </div>
 <div class="section" id="validator">
@@ -1049,7 +1095,7 @@ ex:</p>
 <pre class="last literal-block">
 Validator(name, r'^[a-f0-9]+$')
 Validator(name, (r'^[a-f0-9]+$', re.I))
-Validator(name, re.pattern(r'^[a-f0-9]+$', re.I))
+Validator(name, re.compile(r'^[a-f0-9]+$', re.I))
 </pre>
 </dd>
 <dt>func:</dt>
